# cmake

./: .gitignore  README.txt
project/: CMakeLists.txt  main.c  rb_tree.c
project/include/: CMakeLists.txt  cmake_config.h  common.h  last_compile.h
project/inner/: CMakeLists.txt  ProjectConfig.in  main.c
project/libraries/static/: CMakeLists.txt  logging.c  logging.h
project/service/: Config.cmake.in
test/: CMakeLists.txt  main.c
test/headers/: header.h
test/headers/headers2/: header.h
tutorial/: CMakeLists.txt  config.h.in  last_compile.py  license.txt  main.c  version.h.in
tutorial/include/: cmake_config.h  common.h  defines.h  last_compile.h  proj_version.h
tutorial/libraries/cmake_exportable/: CMakeLists.txt
tutorial/libraries/header_only/: counters.h
tutorial/libraries/static/: CMakeLists.txt  logging.c
